Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27709

[Reg 7.0->8.0] Cannot debug on iOS device

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 8.0.0-beta1
    • Qt Creator 8.0.0-beta1
    • Debugger
    • None
    • iOS/tvOS/watchOS
    • fd90cf0a82 (qt-creator/qt-creator/8.0) fd90cf0a82 (qt-creator/qt-creator/master)

      "Lauching the debugger failed"

      But, the application is in a "starting up" kind of state on the device.
      Qt Creator's general state looks as if debugging has finished (Debug > Stop, and Debug > Abort are disabled etc), but closing Qt Creator opens a dialog "A debugging session is still in progress". After terminating the debugging session via that dialog and quitting Qt Creator, the application continues startup on the device.

      The debugger starts fine for iOS Simulator.

      wNote: This log contains possibly confidential information about your machine, environment variables, in-memory data of the processes you are debugging, and more. It is never transferred over the internet by Qt Creator, and only stored to disk if you manually use the respective option from the context menu, or through mechanisms that are not under the control of Qt Creator's Debugger plugin, for instance in swap files, or other plugins you might use.
      wYou may be asked to share the contents of this log when reporting bugs related to debugger operation. In this case, make sure your submission does not contain data you do not want to or you are not allowed to share.
      w
      dStart parameters: 'cmake_widgets' mode: 3
      dABI: arm-darwin-generic-mach_o-64bit
      dLanguages: c++ 
      dExecutable: /Users/ziller/temp/build/build-cmake_widgets-Qt_6_3_0_for_iOS/Debug-iphoneos/cmake_widgets.app/cmake_widgets
      dDebugger: /Applications/Xcode.app/Contents/Developer/usr/bin/lldb
      dProject: /Users/ziller/temp/cmake_widgets
      dAdditional Search Directories:
      dRemote: connect://localhost:52588
      dSysroot: /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk
      dDebug Source Location: 
      dDebugger settings:
      d/AdditionalArguments:   (default: )
      d/AdjustBreakpointLocations: true  (default: true)
      d/AlwaysAdjustColumnWidths: true  (default: true)
      d/AutoDerefPointers: true  (default: true)
      d/AutoEnrichParameters: true  (default: true)
      d/BreakEvent:   (default: )
      d/BreakOnAbort: false  (default: false)
      d/BreakOnCatch: false  (default: false)
      d/BreakOnCrtDbgReport: false  (default: false)
      d/BreakOnFatal: false  (default: false)
      d/BreakOnThrow: false  (default: false)
      d/BreakOnWarning: false  (default: false)
      d/BreakpointCorrection: true  (default: true)
      d/BreakpointsFullPath: false  (default: false)
      d/CDB_Console: false  (default: false)
      d/CloseBuffersOnExit: false  (default: false)
      d/CloseMemoryBuffersOnExit: true  (default: true)
      d/DisplayStringLimit: 300  (default: 300)
      d/EnableReverseDebugging: false  (default: false)
      d/ExtraDumperFile:   (default: )
      d/FirstChanceExceptionTaskEntry: true  (default: true)
      d/FontSizeFollowsEditor: false  (default: false)
      d/ForceLoggingToConsole: false  (default: false)
      d/GdbCustomDumperCommands:   (default: )
      d/GdbPostAttachCommands:   (default: )
      d/GdbStartupCommands:   (default: )
      d/IgnoreFirstChanceAccessViolation: false  (default: false)
      d/IntelFlavor: false  (default: false)
      d/LoadGdbDumpers2: false  (default: false)
      d/LoadGdbInit: true  (default: true)
      d/LogTimeStamps: false  (default: false)
      d/MaximalStackDepth: 20  (default: 20)
      d/MaximalStringLength: 10000  (default: 10000)
      d/MultiInferior: false  (default: false)
      d/RaiseOnInterrupt: true  (default: true)
      d/SecondChanceExceptionTaskEntry: true  (default: true)
      d/ShowQObjectNames2: true  (default: true)
      d/ShowQmlObjectTree: true  (default: true)
      d/ShowQtNamespace: true  (default: true)
      d/ShowStandardNamespace: true  (default: true)
      d/ShowThreadNames: false  (default: false)
      d/SkipKnownFrames: false  (default: false)
      d/SkipKnownFrames: false  (default: false)
      d/SortStructMembers: true  (default: true)
      d/SourcePaths:   (default: )
      d/StationaryEditorWhileStepping: false  (default: false)
      d/SwitchModeOnExit: false  (default: false)
      d/SymbolPaths:   (default: )
      d/TargetAsync: false  (default: false)
      d/UseAlternatingRowColours: false  (default: false)
      d/UseAnnotations: true  (default: true)
      d/UseCodeModel: true  (default: true)
      d/UseDebuggingHelper: true  (default: true)
      d/UseDynamicType: true  (default: true)
      d/UseIndexCache: true  (default: true)
      d/UseMessageBoxForSignals: true  (default: true)
      d/UsePseudoTracepoints: true  (default: true)
      d/UsePythonDumper: true  (default: true)
      d/UseToolTips: false  (default: true)  ***
      d/UseToolTipsInBreakpointsView: false  (default: false)
      d/UseToolTipsInLocalsView: false  (default: false)
      d/UseToolTipsInStackView: true  (default: true)
      d/WarnOnReleaseBuilds: true  (default: true)
      d/WatchdogTimeout: 20  (default: 20)
      dState changed from DebuggerNotReady(0) to EngineSetupRequested(1)
      dCALL: SETUP ENGINE
      dSTARTING LLDB: /Applications/Xcode.app/Contents/Developer/usr/bin/lldb
       Setting up inferior...
      <9loadDumpers({"token":9})
      <10setupInferior({"attachpid":0,"breakonmain":0,<environment suppressed>,"executable":"/Users/ziller/temp/build/build-cmake_widgets-Qt_6_3_0_for_iOS/Debug-iphoneos/cmake_widgets.app/cmake_widgets","nativemixed":0,"platform":"ios-simulator","processargs":"","remotechannel":"","startmode":3,"symbolfile":"/Users/ziller/temp/build/build-cmake_widgets-Qt_6_3_0_for_iOS/Debug-iphoneos/cmake_widgets.app/cmake_widgets","sysroot":"/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk","token":10,"useterminal":0,"workingdirectory":""})
      <11setFallbackQtVersion({"token":11,"version":393984})
      >(lldb) script sys.path.insert(1, '/Users/ziller/Applications/Qt Creator 8.0.0-beta1/Qt Creator.app/Contents/Resources/debugger/')
      >(lldb) script from lldbbridge import *
      >@
      >lldbversion="lldb-1300.0.42.3
      >Swift version 5.5.2-dev"@
      >(lldb) script theDumper.loadDumpers({"token":9})
      >@
      >result={token="9",dumpers=[{type="QVariant (QVariantMap)",formats="17"},{type="Utils__Id"},{type="Debugger__Internal__GdbMi"},{type="Debugger__Internal__DisassemblerLine"},{type="Debugger__Internal__WatchData"},{type="Debugger__Internal__WatchItem"},{type="Debugger__Internal__BreakpointModelId"},{type="Debugger__Internal__ThreadId"},{type="CPlusPlus__ByteArrayRef"},{type="CPlusPlus__Identifier"},{type="CPlusPlus__Symbol"},{type="CPlusPlus__Class"},{type="CPlusPlus__IntegerType"},{type="CPlusPlus__FullySpecifiedType"},{type="CPlusPlus__NamedType"},{type="CPlusPlus__PointerType"},{type="CPlusPlus__TemplateNameId"},{type="CPlusPlus__QualifiedNameId"},{type="CPlusPlus__Literal"},{type="CPlusPlus__StringLiteral"},{type="CPlusPlus__Internal__Value"},{type="Utils__FilePath"},{type="Utils__FileName"},{type="Utils__ElfSection"},{type="Utils__Port"},{type="Utils__Environment"},{type="Utils__DictKey"},{type="Utils__NameValueDictionary"},{type="Utf8String"},{type="CPlusPlus__Token"},{type="CPlusPlus__Internal__PPToken"},{type="ProString"},{type="ProKey"},{type="Core__GeneratedFile"},{type="ProjectExplorer__ProjectNode"},{type="CMakeProjectManager__Internal__CMakeProjectNode"},{type="QmakeProjectManager__QmakePriFileNode"},{type="QmakeProjectManager__QmakeProFileNode"},{type="std__array",formats="16"},{type="std____1__array",formats="16"},{type="std__function"},{type="std__complex"},{type="std____1__complex"},{type="std__deque"},{type="std____1__deque"},{type="std____debug__deque"},{type="std__list"},{type="std__list__QNX"},{type="std____debug__list"},{type="std____cxx11__list"},{type="std____1__list"},{type="std__map",formats="17"},{type="std____debug__map"},{type="std____debug__set"},{type="std__multiset"},{type="std____cxx1998__map"},{type="std__multimap",formats="17"},{type="std___Rb_tree_iterator"},{type="std___Rb_tree_const_iterator"},{type="std__map__iterator"},{type="__gnu_debug___Safe_iterator"},{type="std__map__const_iterator"},{type="std__set__iterator"},{type="std__set__const_iterator"},{type="std____cxx1998__set"},{type="std___Tree_const_iterator"},{type="std___Tree_iterator"},{type="std__set"},{type="std__set__QNX"},{type="std____1__set"},{type="std____1__multiset"},{type="std____1__map",formats="17"},{type="std____1__multimap",formats="17"},{type="std____1__map__iterator"},{type="std____1__map__const_iterator"},{type="std____1__set__iterator"},{type="std____1__set_const_iterator"},{type="std__stack"},{type="std____debug__stack"},{type="std____1__stack"},{type="std__string",editable="true",formats="5, 6, 7, 8"},{type="std____1__string"},{type="std____1__wstring"},{type="std____weak_ptr"},{type="std__weak_ptr"},{type="std____1__weak_ptr"},{type="std__shared_ptr"},{type="std____1__shared_ptr"},{type="std__unique_ptr"},{type="std____1__unique_ptr"},{type="std__pair"},{type="std__unordered_map",formats="17"},{type="std____debug__unordered_map",formats="17"},{type="std__unordered_multimap",formats="17"},{type="std____debug__unordered_multimap",formats="17"},{type="std__unordered_set"},{type="std____1__unordered_map",formats="17"},{type="std____1__unordered_set"},{type="std____debug__unordered_set"},{type="std__unordered_multiset"},{type="std____debug__unordered_multiset"},{type="std__valarray",formats="16"},{type="std____1__valarray",formats="16"},{type="std__variant"},{type="std__vector",editable="true",formats="16"},{type="std____1__vector",formats="16"},{type="std____debug__vector",formats="16"},{type="std__initializer_list"},{type="string",editable="true"},{type="std__wstring",editable="true",formats="2, 4"},{type="std__basic_string"},{type="std____cxx11__basic_string"},{type="std____cxx11__string",editable="true",formats="5, 6, 7, 8"},{type="std____cxx11__wstring",editable="true",formats="2, 4"},{type="std____1__basic_string"},{type="wstring",editable="true"},{type="std____1__once_flag"},{type="std__once_flag"},{type="__gnu_cxx__hash_set"},{type="uint8_t"},{type="int8_t"},{type="std__byte"},{type="std__optional"},{type="std__experimental__optional"},{type="cv__Size_"},{type="cv__Mat",formats="4"},{type="boost__bimaps__bimap"},{type="boost__optional"},{type="boost__shared_ptr"},{type="boost__container__list"},{type="boost__container__vector",formats="16"},{type="boost__container__static_vector",formats="16"},{type="boost__container__small_vector",formats="16"},{type="boost__gregorian__date"},{type="boost__posix_time__ptime"},{type="boost__posix_time__time_duration"},{type="boost__unordered__unordered_set"},{type="boost__variant"},{type="boost__container__devector"},{type="__m128"},{type="__m256"},{type="__m512"},{type="__m128d"},{type="__m256d"},{type="__m512d"},{type="__m128i"},{type="__m256i"},{type="__m512i"},{type="gsl__span"},{type="gsl__byte"},{type="Eigen__Matrix"},{type="NimStringDesc"},{type="NimGenericSequence__"},{type="TNimNode"},{type="KDSoapValue1"},{type="KDSoapValue"},{type="WTF__String"},{type="PyTypeObject"},{type="_typeobject"},{type="PyObject"},{type="PyVarObject"},{type="QtcDumperTest_FieldAccessByIndex"},{type="QtcDumperTest_PointerArray"},{type="QtcDumperTest_BufArray"},{type="QtcDumperTest_List__NodeX"},{type="QtcDumperTest_List"},{type="QtcDumperTest_String"},{type="QAtomicInt"},{type="QBasicAtomicInt"},{type="QAtomicPointer"},{type="QByteArray",editable="true",formats="5, 6, 7, 8"},{type="QBitArray"},{type="QChar"},{type="Qt__ItemDataRole"},{type="QStandardItemData"},{type="QStandardItem"},{type="QDate"},{type="QTime"},{type="QTimeZone"},{type="QDateTime"},{type="QDir"},{type="QEvent"},{type="QKeyEvent"},{type="QFile"},{type="QFileInfo"},{type="QFixed"},{type="QFiniteStack",formats="16"},{type="QFlags"},{type="QHash",formats="17"},{type="QVariantHash"},{type="QHashNode",formats="17"},{type="QHash__const_iterator"},{type="QHash__iterator"},{type="QHostAddress"},{type="QIPv6Address"},{type="QList",formats="18, 19"},{type="QVariantList"},{type="QImage",formats="2, 4"},{type="QLinkedList"},{type="QLocale"},{type="QMapNode"},{type="QMap",formats="17"},{type="QMultiMap",formats="17"},{type="QVariantMap",formats="17"},{type="QMetaMethod"},{type="QMetaEnum"},{type="QMetaProperty"},{type="QMetaClassInfo"},{type="QMetaObject"},{type="QPair"},{type="QProcEnvKey"},{type="QPixmap"},{type="QMargins"},{type="QPoint"},{type="QPointF"},{type="QRect"},{type="QRectF"},{type="QRegExp"},{type="QRegion"},{type="QScopedPointer"},{type="QSet"},{type="QSharedData"},{type="QSharedDataPointer"},{type="QSize"},{type="QSizeF"},{type="QSizePolicy__Policy"},{type="QSizePolicy"},{type="QStack",formats="16"},{type="QPolygonF"},{type="QPolygon"},{type="QGraphicsPolygonItem"},{type="QString",editable="true",formats="2, 4"},{type="QStaticStringData"},{type="QTypedArrayData"},{type="QStringData"},{type="QAnyStringView"},{type="QStringView",formats="2, 4"},{type="QHashedString"},{type="QQmlRefCount"},{type="QStringRef"},{type="QStringList"},{type="QTemporaryFile"},{type="QTextCodec"},{type="QTextCursor"},{type="QTextDocument"},{type="QUrl",formats="2, 4"},{type="QUuid"},{type="QVariant"},{type="QVector",editable="true",formats="16"},{type="QVarLengthArray"},{type="QSharedPointer"},{type="QWeakPointer"},{type="QPointer"},{type="QXmlAttributes__Attribute"},{type="QXmlAttributes"},{type="QXmlStreamStringRef"},{type="QXmlStreamAttribute"},{type="QV4__Heap__Base"},{type="QV4__Heap__String"},{type="QV4__Object"},{type="QV4__FunctionObject"},{type="QV4__CompilationUnit"},{type="QV4__CallContext"},{type="QV4__ScriptFunction"},{type="QV4__SimpleScriptFunction"},{type="QV4__ExecutionContext"},{type="QQmlSourceLocation"},{type="QV4__String"},{type="QV4__Identifier"},{type="QV4__PropertyHash"},{type="QV4__InternalClass__Transition"},{type="QV4__InternalClassTransition"},{type="QV4__SharedInternalClassData"},{type="QV4__IdentifierTable"},{type="QV4_Object"},{type="QV4__Value"},{type="QV__PropertyHashData"},{type="QV__PropertyHash"},{type="QV4__Scoped"},{type="QV4__ScopedString"},{type="QJSValue"},{type="QQmlBinding"},{type="QTJSC__JSValue"},{type="QScriptValue"},{type="QQmlAccessorProperties__Properties"},{type="QJsonPrivate__qle_bitfield"},{type="QJsonPrivate__qle_signedbitfield"},{type="QJsonPrivate__q_littleendian"},{type="QJsonValue"},{type="QJsonArray"},{type="QJsonObject"},{type="QSqlResultPrivate"},{type="QSqlField"},{type="QLazilyAllocated"},{type="qfloat16"},{type="QCborArray"},{type="QCborMap"},{type="QCborValue"},{type="QCborValue_proxy"},{type="quint16_le"},{type="quint32_le"},{type="quint64_le"},{type="quint16_be"},{type="quint32_be"},{type="quint64_be"},],python="30809"}@
      >(lldb) script theDumper.setupInferior({"attachpid":0,"breakonmain":0,"environment":[],"executable":"/Users/ziller/temp/build/build-cmake_widgets-Qt_6_3_0_for_iOS/Debug-iphoneos/cmake_widgets.app/cmake_widgets","nativemixed":0,"platform":"ios-simulator","processargs":"","remotechannel":"","startmode":3,"symbolfile":"/Users/ziller/temp/build/build-cmake_widgets-Qt_6_3_0_for_iOS/Debug-iphoneos/cmake_widgets.app/cmake_widgets","sysroot":"/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS.sdk","token":10,"useterminal":0,"workingdirectory":""})
      >9^
      
      >@
      >result={token="10",success="1",msg="success",exe="/Users/ziller/temp/build/build-cmake_widgets-Qt_6_3_0_for_iOS/Debug-iphoneos/cmake_widgets.app/cmake_widgets"}@
      >10^
      dTAKING OWNERSHIP OF BREAKPOINT 1
      <12insertBreakpoint({"address":0,"command":"","condition":"","enabled":1,"expression":"","file":"/Users/ziller/temp/untitled1/main.cpp","function":"","id":"","ignorecount":0,"line":48,"modelid":1,"oneshot":0,"token":12,"type":1})
      dTAKING OWNERSHIP OF BREAKPOINT 2
      <13insertBreakpoint({"address":0,"command":"","condition":"","enabled":1,"expression":"","file":"/Users/ziller/temp/cmake_widgets/main.cpp","function":"","id":"","ignorecount":0,"line":11,"modelid":2,"oneshot":0,"token":13,"type":1})
      dTAKING OWNERSHIP OF BREAKPOINT 3
      <14insertBreakpoint({"address":0,"command":"","condition":"","enabled":1,"expression":"","file":"/Users/ziller/temp/cmake_widgets/widget.cpp","function":"","id":"","ignorecount":0,"line":11,"modelid":3,"oneshot":0,"token":14,"type":1})
      <15executeRoundtrip({"token":15})
      >(lldb) script theDumper.setFallbackQtVersion({"token":11,"version":393984})
      >@
      >bridgemessage={msg="got fallback qt version 0x60300",channel="10"}
      >@
      >(lldb) script theDumper.insertBreakpoint({"address":0,"command":"","condition":"","enabled":1,"expression":"","file":"/Users/ziller/temp/untitled1/main.cpp","function":"","id":"","ignorecount":0,"line":48,"modelid":1,"oneshot":0,"token":12,"type":1})
       got fallback qt version 0x60300
      >@
      >result={token="12",lldbid="1",valid="1",hitcount="0",threadid="0",oneshot="0",condition="",enabled="1",valid="1",ignorecount="0",locations=[]}@
      >(lldb) script theDumper.insertBreakpoint({"address":0,"command":"","condition":"","enabled":1,"expression":"","file":"/Users/ziller/temp/cmake_widgets/main.cpp","function":"","id":"","ignorecount":0,"line":11,"modelid":2,"oneshot":0,"token":13,"type":1})
      >@
      >result={token="13",lldbid="2",valid="1",hitcount="0",threadid="0",oneshot="0",condition="",enabled="1",valid="1",ignorecount="0",locations=[]}@
      >(lldb) script theDumper.insertBreakpoint({"address":0,"command":"","condition":"","enabled":1,"expression":"","file":"/Users/ziller/temp/cmake_widgets/widget.cpp","function":"","id":"","ignorecount":0,"line":11,"modelid":3,"oneshot":0,"token":14,"type":1})
      >@
      >result={token="14",lldbid="3",valid="1",hitcount="0",threadid="0",oneshot="0",condition="",enabled="1",valid="1",ignorecount="0",locations=[]}@
      >(lldb) script theDumper.executeRoundtrip({"token":15})
      >@
      >result={token="15",}@
      >12^
      dNO LOCATIONS (YET) FOR BP Type: 0 [enabled] [pending] Hit: 0 times 
      >13^
      dNO LOCATIONS (YET) FOR BP Type: 0 [enabled] [pending] Hit: 0 times 
      >14^
      dNO LOCATIONS (YET) FOR BP Type: 0 [enabled] [pending] Hit: 0 times 
      >15^
      dNOTE: ENGINE SETUP OK
      dState changed from EngineSetupRequested(1) to EngineRunRequested(3)
      dCALL: RUN ENGINE
       Running requested...
      <16runEngine({"token":16})
      >(lldb) script theDumper.runEngine({"token":16})
      >@
      >state="enginerunfailed"@
      dNOTE: ENGINE RUN FAILED
       Run failed.
      dState changed from EngineRunRequested(3) to EngineRunFailed(4)
      dState changed from EngineRunFailed(4) to EngineShutdownRequested(14)
      dCALL: SHUTDOWN ENGINE
      dQUIT DEBUGGER REQUESTED IN STATE 14
      dLLDB PROCESS ERROR: 1
      dNOTE: ENGINE SHUTDOWN FINISHED
      dState changed from EngineShutdownRequested(14) to EngineShutdownFinished(15)
       Debugger finished.
      dState changed from EngineShutdownFinished(15) to DebuggerFinished(16)
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            con Eike Ziller
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes