src/plugins/remotelinux/linuxdevice.cpp
@@ -1104,20 +1104,6 @@ QString LinuxDevice::userAtHost() const
     return sshParameters().userAtHost();
 }
 
-FilePath LinuxDevice::mapToGlobalPath(const FilePath &pathOnDevice) const
-{
-    if (pathOnDevice.needsDevice()) {
-        // Already correct form, only sanity check it's ours...
-        QTC_CHECK(handlesFile(pathOnDevice));
-        return pathOnDevice;
-    }
-    FilePath result;
-    result.setScheme("device");
-    result.setHost(id().toString());
-    result.setPath(pathOnDevice.path());
-    return result;
-}
-
 bool LinuxDevice::handlesFile(const FilePath &filePath) const
 {
     if (filePath.scheme() == "device" && filePath.host() == id().toString())
